Fix Issue with Input Size on Mobile

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,8 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
+    width: 100%;
+
 }
 
 .App-link {
@@ -48,7 +50,7 @@
 
 
 .civStyle {
-    padding: 50px 200px 200px;
+    padding: 50px 100px 100px;
     font-size: 14px;
     text-align: center;
     max-width: 500px;
@@ -79,7 +81,7 @@
 }
 
 .civStyle p {
-    text-justify: auto;
+    text-justify: inter-character;
     text-align: justify;
 }
 
